# LiLib

./: CMakeLists.txt
Src/: CMakeLists.txt  LiLib.h  pch.h
Testing/: CMakeLists.txt  main.cpp
